tests/neg/parser_decl_qualifier_duplicate_static.baa
// RUN: expect-fail
// EXPECT: تكرار 'ساكن' غير مسموح.

ساكن ساكن صحيح قيمة = ١.

صحيح الرئيسية() {
    إرجع قيمة.
}
